tests/baselines/reference/parserIndexSignature9.errors.txt
==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature9.ts (1 errors) ====
    interface I {
       []: number
       ~~
!!! error TS1096: An index signature must have exactly one parameter.
    }